Added Inventory list with details,update,delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=AttireFlow
+
+# Persist DB to disk (choose a per-user folder so each user has their own DB)
+spring.datasource.url=jdbc:h2:file:${user.home}/.attireflow/attireflow-db;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+spring.datasource.username=app
+spring.datasource.password=app
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# IMPORTANT: do not auto-run seed-data.sql on every startup
+spring.sql.init.mode=never
+
+# Optional: H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
